# Bang-PL

./: .gitignore  .pre-commit-config.yaml  Bang.toml  CODE_OF_CONDUCT.md  LICENSE  README.md  bang.py  control_flow_parser.py  evaluator.py  evaluator_nodes.py  evaluator_tests.py  expression_parser.py  grammar.txt  input.txt  input2.txt  lexer.py  lexer_tests.py  lexer_tokens.py  main.py  parser_expression_tests.py  parser_nodes.py  pyproject.toml  semantic_analysis.py  semantic_nodes.py  semantic_tests.py  source.txt  temp.txt
.github/workflows/: ci.yml  pre-commit.yml
bang/: __main__.py  cli.py
bang/docs/: grammar.txt  grammar_v2.ebnf
bang/lexing/: lexer.py  lexer_tests.py  lexer_tokens.py
bang/lexing/tests_lexer/: test_lexer_correctness.py  test_lexer_speed_performance.py
bang/parsing/: control_flow_parser.py  expression_parser.py  heapy_expr_parser.py  lp_expr_parser.py  parser_expression_tests.py  parser_nodes.py
bang/parsing/tests_parser/: test_expr_parser_correctness.py  test_expr_parser_memory_performance.py  test_expr_parser_speed_performance.py
bang/runtime/: evaluator.py  evaluator_nodes.py  evaluator_tests.py
bang/runtime/tests_evaluator/: test_evaluator_correctness.py
bang/semantic/: semantic_analysis.py  semantic_nodes.py  semantic_tests.py
bang/semantic/tests_semantic/: test_semantic_correctness.py  test_semantic_speed_performance.py
bang/tests/: test_e2e_speed_performance.py
bang_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: i3.bang  i4.bang  input2.bang
